copy change test

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 				<hr class="pull-right">
 			</div>
 			<div class="intro">
-				<p>Welcome! We're <a href="">Deborah</a> and <a href="">Dave,</a>
+				<p>We're <a href="">Deborah</a> and <a href="">Dave,</a>
 					Two Fresh Chefs here to help you and your family with your weekly meals.
 					Whether you're just too busy to cook or are struggling to accommodate the dietary needs of all your family members, you can count on us to answer the dreaded question, "What's for dinner?". Not only will you please all the palates that gather at your table, but you'll get fresh, healthy meals customized to your needs. So <a href="">give us a call,</a> kick back, relax, and <a href="">let us get cooking for you!</a>
 				</p>
