Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -1,69 +1,79 @@
 <!DOCTYPE html>
 <html>
-	<head>
-		<title>Two Fresh Chefs</title>
-		<link type="text/css" rel="stylesheet" href="main.css">
-		<link href='http://fonts.googleapis.com/css?family=Dancing+Script:700' rel='stylesheet' type='text/css'>
-		<link href='http://fonts.googleapis.com/css?family=Open+Sans:300' rel='stylesheet' type='text/css'>
-	</head>
-	<body>
-		<div class="menu">
-			<a href=""><img src="images/1405521266_menu-alt.svg" class="pull-left"></a>
-		</div>
-		<div class="header-bar">
-			<div class="logo">
-				<img src="images/TwoFreshChefs_Logos_temp.jpg">
-			</div>
-			<div class="pull-right topright fulljustify">
-				<hr>
-				<p>716.999.9999</p>
-				<p>Orchard Park, NY</p>
-				<p><a href="">SCHEDULE AN<br>
-					APPOINTMENT</a>
-				</p>
-				<hr>
-			</div>
-		</div>
-		<div class="grey-bkrd">
-			<div>
-				<hr class="pull-left">
-				<h1>Fresh. Family. Food.</h1>
-				<hr class="pull-right">
-			</div>
-			<div class="intro">
-				<p>We're <a href="">Deborah</a> and <a href="">Dave,</a>
-					Two Fresh Chefs here to help you and your family with your weekly meals.
-					Whether you're just too busy to cook or are struggling to accommodate the dietary needs of all your family members, you can count on us to answer the dreaded question, "What's for dinner?". Not only will you please all the palates that gather at your table, but you'll get fresh, healthy meals customized to your needs. So <a href="">give us a call,</a> kick back, relax, and <a href="">let us get cooking for you!</a>
-				</p>
-			</div>
-		</div>
-		<div>
-			<div>
-				<hr class="pull-left">
-				<h2>Your homemade gourmet.</h2>
-				<hr class="pull-right">
-			</div>
-			<div class="image-bank">
-				<a href="" class="previous"></a>
-				<img src="http://relishme.files.wordpress.com/2013/06/almond-chicken-with-summer-salsa-crispy-edged.jpg">
-				<a href="" class="next">></a>
-			</div>
-		</div>
-		<div class="footer">
-			<section>
-				<ul>
-					<li><a href="#">About Us</a></li>
-					<li><a href="#">How it Works</a></li>
-					<li><a href="#">Contact</a></li>
-				</ul>
-			</section>
-			<section class="footer-right">
-				<ul>
-					<li><a href="#">Follow us on Facebook</a></li>
-					<li><a href="#">716.999.9999</a></li>
-				</ul>
-			</section>
-		</div>
 
-	</body>
+  <head>
+    <meta charset='utf-8'>
+    <meta http-equiv="X-UA-Compatible" content="chrome=1">
+    <meta name="description" content="Twofreshchefswmatej : ">
+
+    <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
+
+    <title>Twofreshchefswmatej</title>
+  </head>
+
+  <body>
+
+    <!-- HEADER -->
+    <div id="header_wrap" class="outer">
+        <header class="inner">
+          <a id="forkme_banner" href="https://github.com/riveterdesign/TwoFreshChefswMatej">View on GitHub</a>
+
+          <h1 id="project_title">Twofreshchefswmatej</h1>
+          <h2 id="project_tagline"></h2>
+
+            <section id="downloads">
+              <a class="zip_download_link" href="https://github.com/riveterdesign/TwoFreshChefswMatej/zipball/master">Download this project as a .zip file</a>
+              <a class="tar_download_link" href="https://github.com/riveterdesign/TwoFreshChefswMatej/tarball/master">Download this project as a tar.gz file</a>
+            </section>
+        </header>
+    </div>
+
+    <!-- MAIN CONTENT -->
+    <div id="main_content_wrap" class="outer">
+      <section id="main_content" class="inner">
+        <h3>
+<a name="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages"><span class="octicon octicon-link"></span></a>Welcome to GitHub Pages.</h3>
+
+<p>This automatic page generator is the easiest way to create beautiful pages for all of your projects. Author your page content here using GitHub Flavored Markdown, select a template crafted by a designer, and publish. After your page is generated, you can check out the new branch:</p>
+
+<pre><code>$ cd your_repo_root/repo_name
+$ git fetch origin
+$ git checkout gh-pages
+</code></pre>
+
+<p>If you're using the GitHub for Mac, simply sync your repository and you'll see the new branch.</p>
+
+<h3>
+<a name="designer-templates" class="anchor" href="#designer-templates"><span class="octicon octicon-link"></span></a>Designer Templates</h3>
+
+<p>We've crafted some handsome templates for you to use. Go ahead and continue to layouts to browse through them. You can easily go back to edit your page before publishing. After publishing your page, you can revisit the page generator and switch to another theme. Your Page content will be preserved if it remained markdown format.</p>
+
+<h3>
+<a name="rather-drive-stick" class="anchor" href="#rather-drive-stick"><span class="octicon octicon-link"></span></a>Rather Drive Stick?</h3>
+
+<p>If you prefer to not use the automatic generator, push a branch named <code>gh-pages</code> to your repository to create a page manually. In addition to supporting regular HTML content, GitHub Pages support Jekyll, a simple, blog aware static site generator written by our own Tom Preston-Werner. Jekyll makes it easy to create site-wide headers and footers without having to copy them across every page. It also offers intelligent blog support and other advanced templating features.</p>
+
+<h3>
+<a name="authors-and-contributors" class="anchor" href="#authors-and-contributors"><span class="octicon octicon-link"></span></a>Authors and Contributors</h3>
+
+<p>You can <a href="https://github.com/blog/821" class="user-mention">@mention</a> a GitHub username to generate a link to their profile. The resulting <code>&lt;a&gt;</code> element will link to the contributor's GitHub Profile. For example: In 2007, Chris Wanstrath (<a href="https://github.com/defunkt" class="user-mention">@defunkt</a>), PJ Hyett (<a href="https://github.com/pjhyett" class="user-mention">@pjhyett</a>), and Tom Preston-Werner (<a href="https://github.com/mojombo" class="user-mention">@mojombo</a>) founded GitHub.</p>
+
+<h3>
+<a name="support-or-contact" class="anchor" href="#support-or-contact"><span class="octicon octicon-link"></span></a>Support or Contact</h3>
+
+<p>Having trouble with Pages? Check out the documentation at <a href="http://help.github.com/pages">http://help.github.com/pages</a> or contact <a href="mailto:support@github.com">support@github.com</a> and we’ll help you sort it out.</p>
+      </section>
+    </div>
+
+    <!-- FOOTER  -->
+    <div id="footer_wrap" class="outer">
+      <footer class="inner">
+        <p class="copyright">Twofreshchefswmatej maintained by <a href="https://github.com/riveterdesign">riveterdesign</a></p>
+        <p>Published with <a href="http://pages.github.com">GitHub Pages</a></p>
+      </footer>
+    </div>
+
+    
+
+  </body>
 </html>
